2010-02-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.7.7

	* debian/*: Similarly updated for new release to Debian

2010-02-14  Romain Francois <romain@r-enthusiasts.com>

	* src/Rcpp/Language.h: fixing serious bug. The 'code bloat'
	constructors taking a std::string did not explicitely
	create a symbol, so the created calls were wrong.

	* src/Rcpp/Language.h: new template classes Rcpp::unary_call
	and Rcpp::binary_call to allow use of Language objects
	in STL algorithms.

	* inst/unitTests/runit.Language.R: unit test and example
	of using unary_call and binary_call

2010-02-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.7.6

	* NEWS: Updated

	* debian/*: Similarly updated for new release to Debian

2010-02-12  Romain Francois <romain@r-enthusiasts.com>

	* src/Rcpp/Environment.h: Environment gains a default
	constructor. This is needed for RInside.

2010-02-10  Romain Francois <romain@r-enthusiasts.com>

	* src/Rcpp/SEXP_Vector.h: SEXP_Vector (and therefore
	ExpressionVector and GenericVector, a.k.a List) gain
	methods push_front, push_back and insert that are templated and
	use the 'implicit wrap idiom' to add an element to the front
	or, the back or an arbitrary (valid) position of the list,
	pushing other elements. Internally the SEXP is actually copied.

	* src/Rcpp/SEXP_Vector.h: SEXP_Vector gains an erase method
	modelled after std::vector<>::erase to remove elements from
	a list. erase has a single iterator (or int) form that removes
	one element, and a range based version
	erase(iterator first, iterator last) that erases all elements
	between first and last.

	* src/Rcpp/VectorBase.h: VectorBase gains a version of
	offset to support retrieving the offset of a given name of a
	vector: offset( const std::string& name)

	* src/Rcpp/SimpleVector.h : uses the new offset to perform
	names based indexing (FR #808)
	* src/Rcpp/SEXP_Vector.h: same
	* src/Rcpp/CharacterVector.h: same
