@@ -1,3 +1,8 @@
+2010-02-14  Romain Francois <romain@r-enthusiasts.com>
+
+	* src/Rcpp/Language.h: accepting Function in unary_call and 
+	binary_call to support STL algorithms using R functions.
+
 2010-02-14  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: Release 0.7.7
